add maven plugin exec:exec and make the example Server runnable from it